0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_sp.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_sp.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py:


Sine bell and squared Sine bell window multiplication
=====================================================

In this example, we use sine bell or squared sine bell window multiplication to apodize a NMR signal in the time domain.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 20-25

.. code-block:: default

    import spectrochempy as scp

    DATADIR = scp.preferences.datadir
    path = DATADIR / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: default

    dataset1D = scp.nmr.read(path, expno=1, remove_digital_filter=True)
    dataset1D






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [topspin_1d expno:1 procno:1 (FID)] — complex128, size: 12411, count</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">topspin_1d expno:1 procno:1 (FID)</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:57:56+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:57:56+00:00> Imported from TopSpin dataset</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">intensity</div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">R[    1078     2284 ...   0.2342  -0.1008] countI[    1037     2200 ... -0.06203  0.05273] count</div></div></div>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">12411 (complex)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">12411</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">F1 acquisition time</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       0        4 ... 4.964e+04 4.964e+04] µs</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 30-31

Normalize the dataset values and reduce the time domain

.. GENERATED FROM PYTHON SOURCE LINES 31-34

.. code-block:: default

    dataset1D /= dataset1D.real.data.max()  # normalize
    dataset1D = dataset1D[0.0:15000.0]








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Apply Sine bell window apodization with parameter ssb=2, which correspond to a cosine function

.. GENERATED FROM PYTHON SOURCE LINES 36-38

.. code-block:: default

    new1, curve1 = scp.sinm(dataset1D, ssb=2, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 39-40

this is equivalent to

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: default

    new1, curve1 = dataset1D.sinm(ssb=2, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 43-44

or also

.. GENERATED FROM PYTHON SOURCE LINES 44-46

.. code-block:: default

    new1, curve1 = scp.sp(dataset1D, ssb=2, pow=1, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 47-48

Apply Sine bell window apodization with parameter ssb=2, which correspond to a sine function

.. GENERATED FROM PYTHON SOURCE LINES 48-50

.. code-block:: default

    new2, curve2 = dataset1D.sinm(ssb=1, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 51-52

Apply Squared Sine bell window apodization with parameter ssb=1 and ssb=2

.. GENERATED FROM PYTHON SOURCE LINES 52-55

.. code-block:: default

    new3, curve3 = scp.qsin(dataset1D, ssb=2, retapod=True, inplace=False)
    new4, curve4 = dataset1D.qsin(ssb=1, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 56-57

Apply shifted Sine bell window apodization with parameter ssb=8 (mixed sine/cosine window)

.. GENERATED FROM PYTHON SOURCE LINES 57-59

.. code-block:: default

    new5, curve5 = dataset1D.sinm(ssb=8, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 60-63

Plotting
--------
Compare sine bell windows on a first figure.

.. GENERATED FROM PYTHON SOURCE LINES 63-78

.. code-block:: default

    ax = dataset1D.real.plot(color="k", label="original FID", xlim=(0, 15000))
    _ = curve1.plot(clear=False, color="r", ls="--", label="window, sinm ssb = 2")
    _ = new1.real.plot(
        clear=False,
        color="r",
        label="apodized FID, sinm ssb = 2 (cosine window)",
    )
    _ = curve2.plot(clear=False, color="b", ls="--", label="window, sinm ssb = 1")
    _ = new2.real.plot(
        clear=False,
        color="b",
        label="apodized FID, sinm ssb = 1 (sine window)",
    )
    _ = ax.legend()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_001.png
   :alt: plot proc sp
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 79-80

Compare squared sine windows on a second figure.

.. GENERATED FROM PYTHON SOURCE LINES 80-87

.. code-block:: default

    ax = dataset1D.real.plot(color="k", label="original FID", xlim=(0, 15000))
    _ = curve3.plot(clear=False, color="m", ls="--", label="window, qsin ssb = 2")
    _ = new3.real.plot(clear=False, color="m", label="apodized FID, qsin ssb = 2")
    _ = curve4.plot(clear=False, color="g", ls="--", label="window, qsin ssb = 1")
    _ = new4.real.plot(clear=False, color="g", label="apodized FID, qsin ssb = 1")
    _ = ax.legend()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_002.png
   :alt: plot proc sp
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 88-89

Mixed sine/cosine windows are easier to inspect separately.

.. GENERATED FROM PYTHON SOURCE LINES 89-98

.. code-block:: default

    ax = dataset1D.real.plot(color="k", label="original FID", xlim=(0, 15000))
    _ = curve5.plot(clear=False, color="c", ls="--", label="window, sinm ssb = 8")
    _ = new5.real.plot(
        clear=False,
        color="c",
        label="apodized FID, sinm ssb = 8",
    )
    _ = ax.legend()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_003.png
   :alt: plot proc sp
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_sp_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 99-103

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python
scp.show()
sphinx_gallery_thumbnail_number = -1


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.912 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_sp.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_proc_sp.py <plot_proc_sp.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_proc_sp.ipynb <plot_proc_sp.ipynb>`
